--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -14,8 +14,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  r:
-
+  test:
     runs-on: windows-latest
     permissions:
       contents: read
@@ -30,3 +29,12 @@ jobs:
 
     - name: Build with Gradle Wrapper
       run: ./gradlew build
+
+    - name: test with Gradle Wrapper
+      run: ./gradlew test
+
+    - name: Jar with Gradle Wrapper
+      run: ./gradlew jar
+
+    - name: voer uit with Gradle Wrapper
+      run: java -cp "build/libs/demo-ci-2-1.0-snapshot.jar;." be.kuleuven.HelloName "Lucas"
