--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -37,4 +37,4 @@ jobs:
       run: ./gradlew jar
 
     - name: voer uit with Gradle Wrapper
-      run: java -cp "build/libs/demo-ci-2-1.0-snapshot.jar;." be.kuleuven.HelloName "Lucas"
+      run: java -cp "build/libs/proberenTeVolgenInDeLes-1.0-snapshot.jar;." be.kuleuven.HelloName "Stef"
